plugins {
    id 'application'
    id 'java'
    id 'org.openjfx.javafxplugin' version '0.1.0'
    id "org.beryx.jlink" version "2.24.1"
}

group = 'edu'
version = '1.0.0'

repositories {
    mavenCentral()
}

java {
    toolchain {
        languageVersion=JavaLanguageVersion.of(21)
    }
}

application {
    mainClass='edu.Main'
}

javafx {
    version = '21'
    modules=['javafx.controls', 'javafx.graphics', 'javafx.media']
}

jlink {
    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
    launcher {
        name = 'StarWars (Kirill Edition)'
        moduleName = 'edu'
        mainClass = 'edu.Main'

        jvmArgs = [
                // Использование G1 Garbage Collector (современный и более производительный)
                '--add-modules', 'ALL-MODULE-PATH',
                '-XX:+UseG1GC',
                '-XX:MaxGCPauseMillis=20',
                // Начальный и максимальный размер кучи (убедитесь, что достаточно для вашей игры)
                '-Xms512m',
                '-Xmx1024m'
        ]
    }
    forceMerge('log4j-api')
    jpackage {
        if (org.gradle.internal.os.OperatingSystem.current().windows) {
            installerOptions += ['--win-per-user-install', '--win-dir-chooser', '--win-menu', '--win-shortcut']
        }
    }
}